--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
-name: goreleaser
+name: Release
 
 on:
   push:
     tags:
       - 0.*
-      - 1.*
 
 jobs:
   goreleaser:
@@ -16,21 +15,17 @@ jobs:
         with:
           fetch-depth: 0
       -
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHPR }}
-      -
         name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
+        with:
+            go-version: 1.22.3
+
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: "~> v1"
+          version: 2.0.0
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GHPR }}
