--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,8 +3,7 @@ project_name: ghpr
 builds:
   -
     id: ghpr
-    main: ./cmd/ghpr.go
-
+    main: ./cmd/cli/pr/main.go
     env:
       - CGO_ENABLED=0
     goos:
@@ -15,23 +14,12 @@ builds:
       - arm64
 
 archives:
-  - replacements:
-      darwin: darwin
-      linux: linux
-      amd64: x86_64
+  -
+    id: archive-cli
+    builds:
+      - ghpr
 
-checksum:
-  name_template: 'checksums.txt'
-
-snapshot:
-  name_template: "{{ incpatch .Version }}-next"
-
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
+    name_template: "ghpr_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 
 # .goreleaser.yaml
 brews:
