--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,7 +26,7 @@ brews:
   -
     name: "ghpr@{{ .Tag }}"
 
-    tap:
+    repository:
       owner: jmoney
       name: homebrew-personal
 
@@ -42,7 +42,7 @@ brews:
 
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
 
-    folder: Formula
+    directory: Formula
 
     homepage: "https://jmoney.dev/create-pr-from-jira"
 
@@ -72,7 +72,7 @@ brews:
   -
     name: "ghpr"
 
-    tap:
+    repository:
       owner: jmoney
       name: homebrew-personal
 
@@ -88,7 +88,7 @@ brews:
 
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
 
-    folder: Formula
+    directory: Formula
 
     homepage: "https://jmoney.dev/create-pr-from-jira"
 
